--- a/ExpProject/ExpProject.qsf
+++ b/ExpProject/ExpProject.qsf
@@ -25,7 +25,7 @@
 # Notes:
 #
 # 1) The default values for assignments are stored in the file:
-#		SegCounter_assignment_defaults.qdf
+#		ExpProject_assignment_defaults.qdf
 #    If this file doesn't exist, see file:
 #		assignment_defaults.qdf
 #
@@ -49,25 +49,29 @@ set_global_assignment -name MIN_CORE_JUNCTION_TEMP 0
 set_global_assignment -name MAX_CORE_JUNCTION_TEMP 85
 set_global_assignment -name RESERVE_ALL_UNUSED_PINS "AS INPUT TRI-STATED"
 set_global_assignment -name STRATIX_DEVICE_IO_STANDARD "3.3-V LVTTL"
-set_location_assignment PIN_23 -to clk
+set_location_assignment PIN_23 -to i_clk
 set_global_assignment -name POWER_EXT_SUPPLY_VOLTAGE_TO_REGULATOR 3.3V
 set_global_assignment -name RESERVE_ALL_UNUSED_PINS_NO_OUTPUT_GND "AS INPUT TRI-STATED"
-set_location_assignment PIN_127 -to led7s[0]
-set_location_assignment PIN_126 -to led7s[1]
-set_location_assignment PIN_125 -to led7s[2]
-set_location_assignment PIN_115 -to led7s[7]
-set_location_assignment PIN_119 -to led7s[6]
-set_location_assignment PIN_120 -to led7s[5]
-set_location_assignment PIN_121 -to led7s[4]
-set_location_assignment PIN_124 -to led7s[3]
-set_location_assignment PIN_128 -to led7[0]
-set_location_assignment PIN_129 -to led7[1]
-set_location_assignment PIN_132 -to led7[2]
-set_location_assignment PIN_133 -to led7[3]
-set_location_assignment PIN_135 -to led7[4]
-set_location_assignment PIN_136 -to led7[5]
-set_location_assignment PIN_137 -to led7[6]
-set_location_assignment PIN_138 -to led7[7]
+set_location_assignment PIN_86 -to i_push_button_5
+set_location_assignment PIN_87 -to i_push_button_4
+set_location_assignment PIN_91 -to i_push_button_3
+set_location_assignment PIN_90 -to i_push_button_2
+set_location_assignment PIN_127 -to o_led7s[0]
+set_location_assignment PIN_126 -to o_led7s[1]
+set_location_assignment PIN_125 -to o_led7s[2]
+set_location_assignment PIN_115 -to o_led7s[7]
+set_location_assignment PIN_119 -to o_led7s[6]
+set_location_assignment PIN_120 -to o_led7s[5]
+set_location_assignment PIN_121 -to o_led7s[4]
+set_location_assignment PIN_124 -to o_led7s[3]
+set_location_assignment PIN_128 -to o_led7[0]
+set_location_assignment PIN_129 -to o_led7[1]
+set_location_assignment PIN_132 -to o_led7[2]
+set_location_assignment PIN_133 -to o_led7[3]
+set_location_assignment PIN_135 -to o_led7[4]
+set_location_assignment PIN_136 -to o_led7[5]
+set_location_assignment PIN_137 -to o_led7[6]
+set_location_assignment PIN_138 -to o_led7[7]
 set_global_assignment -name VHDL_FILE ExpProjectTop.vhd
 set_global_assignment -name VHDL_FILE SegCounter.vhd
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
@@ -77,4 +81,5 @@ set_global_assignment -name LL_MEMBER_STATE LOCKED -section_id "Root Region"
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 200 LFPM AIRFLOW"
 set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
+set_global_assignment -name VHDL_FILE SwitchDebouncer.vhd
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
