--- a/ExpProject/ExpProject.qsf
+++ b/ExpProject/ExpProject.qsf
@@ -102,4 +102,7 @@ set_global_assignment -name LL_MEMBER_STATE LOCKED -section_id "Root Region"
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 200 LFPM AIRFLOW"
 set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
+set_location_assignment PIN_113 -to o_txd
+set_location_assignment PIN_114 -to i_rxd
+set_global_assignment -name VHDL_FILE UartTx.vhd
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
