--- a/ExpProject/ExpProject.qsf
+++ b/ExpProject/ExpProject.qsf
@@ -35,7 +35,7 @@
 #
 # -------------------------------------------------------------------------- #
 
-
+set_global_assignment -name ALLOW_ANY_ROM_SIZE_FOR_RECOGNITION ON
 set_global_assignment -name FAMILY "Cyclone IV E"
 set_global_assignment -name DEVICE EP4CE10E22C8
 set_global_assignment -name TOP_LEVEL_ENTITY ExpProjectTop
@@ -105,4 +105,5 @@ set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
 set_location_assignment PIN_113 -to o_txd
 set_location_assignment PIN_114 -to i_rxd
 set_global_assignment -name VHDL_FILE UartTx.vhd
+set_global_assignment -name VHDL_FILE sync_rom.vhd
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
