CRenemed segcounter to hexto7seg

--- a/ExpProject/ExpProject.qsf
+++ b/ExpProject/ExpProject.qsf
@@ -93,7 +93,6 @@ set_location_assignment PIN_66 -to i_dipswitch[5]
 set_location_assignment PIN_67 -to i_dipswitch[6]
 set_location_assignment PIN_68 -to i_dipswitch[7]
 set_global_assignment -name VHDL_FILE ExpProjectTop.vhd
-set_global_assignment -name VHDL_FILE SegCounter.vhd
 set_global_assignment -name VHDL_FILE SwitchDebouncer.vhd
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
@@ -106,4 +105,6 @@ set_location_assignment PIN_113 -to o_txd
 set_location_assignment PIN_114 -to i_rxd
 set_global_assignment -name VHDL_FILE UartTx.vhd
 set_global_assignment -name VHDL_FILE sync_rom.vhd
+set_global_assignment -name VHDL_FILE sync_ram_prev_read.vhd
+set_global_assignment -name VHDL_FILE HexTo7Seg.vhd
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
